--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,10 +1,10 @@
 .home {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-
-@media screen and (max-width: 786px) {
+@media screen and (max-width: 768px) {
   .home {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
